--- a/FarmMonitor.wxs
+++ b/FarmMonitor.wxs
@@ -1,13 +1,15 @@
 <?xml version="1.0"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-    <Product Id="5771B6D8-D3C2-4b7c-801A-EE6AED1916EE"
-             Name="Farm Monitor v0.1"
+    <Product Id="*"
+             Name="Farm Monitor v0.2"
              Language="1033"
-             Version="0.1.0"
+             Version="0.2.0"
              Manufacturer="Chris Oldwood"
              UpgradeCode="A4751532-0F28-4fe6-B39E-6195062E15B3">
 
         <Package Compressed="yes"/>
+
+        <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
 
         <Media Id="1" Cabinet="product.cab" EmbedCab="yes"/>
 
